context yaradildi,search modali elave olundu,

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
   --background: #ffffff;
   --foreground: #171717;
 
-   --main-purple: #481277;
+   --main-purple: #ad46ff;
    --hd-purple:#cbace6;
   --main-blue: #3b82f6;
   --main-green: #10b981;
@@ -86,4 +86,27 @@ tr:hover{
 .td-relative:hover .popup {
   opacity: 1;
   pointer-events: auto;
+}
+
+
+input,select{
+border: 1px solid var(--main-purple);
+border-radius: 8px;
+padding-left: 8px;
+  height: 24px;
+  color: black;
+
+}
+
+.search-inp{
+  width: 155px;
+}
+
+.searchBtn{
+  padding-right:8px;
+  padding-left: 8px;
+  border-radius: 8px;
+  height: 32px;
+  font-size: 16px;
+  
 }
